--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,10 +1,12 @@
 body {
     margin: 0;
+    overflow: hidden;
   }
   #root {
     max-width: 100vw;
+    max-height: 100vh;
     margin: 0 auto;
-    padding: 2rem;
+    /* padding: 2rem; */
     text-align: center;
   }
   
