Added styling to LiveChat

--- a/Frontend/src/pages/Home.css
+++ b/Frontend/src/pages/Home.css
@@ -1,7 +1,7 @@
 /* GENERAL */
 
 :root {
-    --color-bg: white;
+    --color-bg: black;
     --color-room-list-bg: #fae6ff;
     --color-room-bg: white;
     --color-room-hover: #e8e8e8;
