--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -3,8 +3,8 @@ body {
     overflow: hidden;
   }
   #root {
-    max-width: 100vw;
-    max-height: 100vh;
+    height: 100%;
+    width: 100%;
     margin: 0 auto;
     /* padding: 2rem; */
     text-align: center;
