--- a/Frontend/src/pages/Home.css
+++ b/Frontend/src/pages/Home.css
@@ -22,6 +22,9 @@ body {
 
 #form-container {
     flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #hero-container {
@@ -32,8 +35,6 @@ body {
 #app-name {
     color: white;
     font-size: 5rem;
-    padding-left: 1em;
-    padding-top: 1em;
     text-align: left;
 }
 
