connection and disconnection working properly

--- a/Frontend/src/components/ConnectForm/ConnectForm.css
+++ b/Frontend/src/components/ConnectForm/ConnectForm.css
@@ -22,7 +22,7 @@ button:active {
   transform: scale(0.98); /* Slightly scale down the button */
 }
 
-#channel-input {
+input {
   display: block;
   padding: 15px;
   margin: auto auto 25px;
