--- a/Frontend/src/pages/Home/Home.css
+++ b/Frontend/src/pages/Home/Home.css
@@ -23,8 +23,6 @@ body {
 #form-container {
     flex: 1;
     display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 #hero-container {
@@ -35,6 +33,8 @@ body {
 #app-name {
     color: white;
     font-size: 5rem;
+    padding-left: 1em;
+    padding-top: 1em;
     text-align: left;
 }
 
