--- a/Frontend/src/components/ConnectForm/ConnectForm.css
+++ b/Frontend/src/components/ConnectForm/ConnectForm.css
@@ -1,12 +1,19 @@
+.form-group {
+  display: flex;
+  flex-wrap: wrap;
+  align-self: flex-end;
+  width: 100%;
+  margin-left: 4vw;
+  margin-bottom: 4vw;
+}
+
 button {
-  margin: 10px;
-  width: 8vw;
-  border: 1px solid white;
-  color: black;
-  font-weight: bold;
-  background-color: white;
-  padding: 10px;
-  border-radius: 4px;
+  text-align: center;
+  margin-right: 2vw;
+  width: 13vw;
+  font-weight: bolder;
+  font-size: medium;
+  padding: 1vw;
   cursor: pointer;
   transition: background-color 0.3s ease, box-shadow 0.3s ease, transform 0.2s ease, border-color 0.3s ease;
 }
@@ -20,6 +27,18 @@ button:active {
   background-color: #e0e0e0; /* Darker background when pressed */
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Reduce shadow size */
   transform: scale(0.98); /* Slightly scale down the button */
+}
+
+#create-button {
+  border: 1px solid black;
+  color: black;
+  background-color: white;
+}
+
+#join-button {
+  border: 1px solid white;
+  color: white;
+  background-color: black;
 }
 
 input {
@@ -39,6 +58,6 @@ input {
 }
 
 .card {
-  display: inline-block;
-  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
 }
