--- a/Frontend/src/pages/Room/Room.css
+++ b/Frontend/src/pages/Room/Room.css
@@ -1,7 +1,7 @@
 /* GENERAL */
 
 :root {
-    --size-widget-button: 75px;
+    --size-widget-button: 50px;
     --color-widget-button: #edbd82;
     --color-widget-button-hover: #d8a96f;
     --color-widget-button-active: #c38f50;
@@ -10,48 +10,83 @@
     --color-exit-button: #ed8282;
     --color-exit-button-hover: #e46d6d;
     --color-exit-button-active: #c55252;
+    --room-padding: 15px;
 }
 
-#room-container {
-    width: 100%;
-    height: 100vh;
-    padding: var(--room-padding);
-    position: relative;
-    background-image: url('../assets/library.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+#widget-menu {
+  display: grid;
+  z-index: 1;
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  left: var(--room-padding);
+  top: var(--room-padding);
+  background-color: var(--color-widget-button);
+  background-image: url("../assets/widget-button.svg");
+  background-size: 75%;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 4px solid black;
+  border-radius: 15px;
+  transition: all 0.5s;
+  justify-content: center;  /* Horizontally centers the text */
+  font-size: 2em;
+  padding-top: 3px;
+}
+
+#widget-menu:hover {
+  background-color: var(--color-widget-button-hover);
+  transition: all 0.5s ease;
 }
 
 /* WIDGET BUTTON */
 
 #widget-button {
-    width: var(--size-widget-button);
-    height: var(--size-widget-button);
+    z-index: 1;
+    width: 150px;
+    height: 40px;
     position: absolute;
-    top: var(--room-padding);
     left: var(--room-padding);
+    top: var(--room-padding);
     background-color: var(--color-widget-button);
     background-image: url("../assets/widget-button.svg");
     background-size: 75%;
     background-repeat: no-repeat;
     background-position: center;
-    border: 3px solid black;
-    border-radius: 25px;
+    border: 4px solid black;
+    border-radius: 15px;
     transition: all 0.5s;
+    display: flex;
+    justify-content: center;  /* Horizontally centers the text */
+    align-items: center;  
+    font-size: 2em;
+    padding-bottom: 20px;
 }
 
 #widget-button:hover {
     background-color: var(--color-widget-button-hover);
     cursor: pointer;
-    transform: translate(0, -5%);
+    transition: all 0.5s ease;
 }
 
 #widget-button:active {
     background-color: var(--color-widget-button-active);
 }
 
+.widget-item {
+  font-size: 0.5em !important;
+}
+
 /* EXIT BUTTON */
+
+#widget-close-button {
+  width: 150px;
+  height: 30px;
+}
+
+#widget-close-button:hover {
+  cursor: pointer;
+}
 
 #exit-button {
     width: var(--width-exit-button);
@@ -77,4 +112,12 @@
 
 #exit-button:active {
     background-color: var(--color-exit-button-active);
+}
+
+h3 {
+  position: absolute;
+  z-index: 1;
+  bottom: 25px;
+  right: 25px;
+  opacity: 0.7;
 }
